--- a/.github/workflows/DigitalOcean.yml
+++ b/.github/workflows/DigitalOcean.yml
@@ -1,4 +1,4 @@
-    - name: Install doctl
+      name: Install doctl
       uses: digitalocean/action-doctl@v2
       with:
         token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
